# maintenance-burden

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  dependabot.yml
src/: main.rs  options.rs
tests/: ci.rs  dogfood.rs
