[package]
name = "maintenance-burden"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.18"
regex = "1.9"
subprocess = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = "1.5"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
]
