[package]
name = "maintenance-burden"
version = "0.1.4"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Calculate the maintenance burden of each file in a git repository"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/maintenance-burden"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = "0.10"
log = "0.4"
once_cell = "1.19"
regex = "1.10"
subprocess = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2"
similar-asserts = "1.5"
tempfile = "3.10"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
]
